cambios basicos globales

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,15 @@
-
+:root {
+  --font-family: "SUSE", system-ui; 
+  --color-primary: #EEEDEC; 
+  --color-secondary: #242424;
+}
 
 
  html {
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
+    font-family: "SUSE", system-ui;
+    
   }
   
   /* Sections
